Refactor, rename a class, update JavaDocs